--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-router-dom": "^6.4.5",
-    "react-scripts": "2.1.1"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
